--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Joke Website</title>
     <link rel="stylesheet" href="./SCSS/main.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <div id="cont">
             <h1>Random Joke Generator!</h1>
             <p id="joke"></p>
-            <button class="cta">
+            <button class="cta"  id="jokeBtn">
                 <span class="span">NEXT</span>
                 <span class="second">
                   <svg width="50px" height="20px" viewBox="0 0 66 43" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
@@ -25,5 +28,7 @@
             </button>
         </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
